# deep-facility

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
.github/workflows/: tests-with-i18n.yml  unittests.yml
docs/: commands.md  components.md  design.md  workflow.md
scripts/google-buildings/: README.md  google_buildings.py  requirements.txt
src/deepfacility/: __init__.py  flows.py  main.py
src/deepfacility/config/: config.py  countries_s2_tokens.json  template_sys.toml  template_user.toml
src/deepfacility/data/: downloads.py  inputs.py
src/deepfacility/lang/: __init__.py  helpers.py  languages.json  translator.py  translator_default.py  translator_i18n.py  translator_i18n_nlp.py
src/deepfacility/lang/messages/: fr.json
src/deepfacility/tasks/: clustering.py  distance.py  outlines.py  placement.py
src/deepfacility/utils/: commands.py  spatial.py  util.py
src/deepfacility/ux/: main.py  session.py
src/deepfacility/ux/css/: style.css
src/deepfacility/ux/templates/: 10-upload.html  12-confirm-new.html  20-configure.html  22-info.html  30-prep-status-container.html  30-prep-status.html  30-prep.html  40-run-status-container.html  40-run-status.html  40-run.html  42-locs-select.html  50-map.html  52-result-dirs.html  index.html
src/deepfacility/viz/: visualize.py
src/deepfacility/viz/leaflet_template/: index.html
src/deepfacility/viz/leaflet_template/css/: custom_theme.css
src/deepfacility/viz/leaflet_template/js/: main.js
tests/: pytest_init.py  test_clustering.py  test_config.py  test_distance.py  test_prep.py  test_session.py  test_translator.py  test_translator_i18n.py  test_utils.py  test_utils_df.py  test_utils_spatial.py  test_visualize.py
tests/test_data/results/: cluster_centers.csv  cluster_counts.csv  optimal_facilities.csv  village_shapes.dbf  village_shapes.shp  village_shapes.shx
