[project]
name = "deepfacility"
version = "0.1.0"
description = "Tools for optimizing placement of health facilities based on village locations."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "IDM", email = "idm@gatesfoundation.org" }
]

dependencies = [
  "geopandas~=0.14.3",
  "matplotlib~=3.8.3",
  "openlocationcode~=1.0.1",
  "pandas~=2.2.1",
  "pyarrow~=15.0.1",
  "scikit-learn~=1.4.1",
  "scipy~=1.12.0",
  "tomli~=2.0.1",
  "tomli_w~=1.0.0",
  "unidecode~=1.3.8",
  "fastapi~=0.108.0",
  "htmx~=0.0.0",
  "requests~=2.32",
  "pycountry~=23.12.11",
  "uvicorn~=0.22.0",
  "joblib~=1.3.2"
]

[project.optional-dependencies] # extras
test = ["pytest~=8.1.1", "pytest_mock~=3.14.0"]
i18n = ["polib~=1.2.0", "transformers~=4.40.1", "sentencepiece", "torch", "torchvision", "torchaudio"]

# see readme for more details about installing PyTorch

[project.urls]
"Homepage" = "https://https://github.com/InstituteforDiseaseModeling/deepfacility"

[project.scripts]
deepfacility = "deepfacility:main"

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]  # data files to be installed
package-data = {"deepfacility" = [
  "config/*.toml", 
  "config/*.json", 
  "translator/messages/*.json",
  "viz/leaflet_template/.html", 
  "viz/leaflet_template/css/*.css",
  "viz/leaflet_template/css/images/*.png",
  "viz/leaflet_template/js/*.js",
  "viz/leaflet_template/js/*.map",
  "viz/leaflet_template/markers/*.png",
  "viz/leaflet_template/webfonts/*.*",
  "viz/leaflet_template/*.html",
  "ux/css/*.css", 
  "ux/templates/*.html"]}

# See template:
# https://github.com/pypa/sampleproject/blob/main/pyproject.toml

# See spec:
# https://peps.python.org/pep-0518/
